added countdown to next update

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <main>
       <h1>Space Station Position Tracker</h1>
       <p>ISS Position on <span id="dateTime"></span></p>
+      <small>Next update in: <span id="countdown">0</span></small>
 
       <div id="statsContainer">
         <div id="listDiv1">
