fix styling issues

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
       </div>
 
       <div id="mapContainer"></div>
-      <div id="passes">
+      <!-- <div id="passes">
         <h2><i>Coming Soon ...</i></h2>
         <p>Upcoming passes for your area!</p>
-      </div>
+      </div> -->
     </main>
 
     <script
